--- a/index.css
+++ b/index.css
@@ -1,9 +1,8 @@
 html, body			{ margin: 0; 
 				  background-color: #333;
 				  height: 100%; }
-body				{ font-family: "Alegreya Sans", Gill Sans, Gill Sans MT, Calibri, sans-serif;
-				  font-size: 12pt; 
-			  	  font-weight: 300; }
+body				{ font-family: "Alegreya Sans", sans-serif; 
+				  font-size: 13pt; }
 section				{ display: flex; 
 				  display: -webkit-flex;
 			 	  flex-direction: column;
@@ -11,7 +10,8 @@ section				{ display: flex;
 				  height: 100%; }
 header				{ display: flex;
 				  display: -webkit-flex;
-				  width: 60%;	
+				  width: 50%;	
+				  min-width: 600px;
 				  padding-top: 2%;
 				  margin-left: auto;
 				  margin-right: auto;
@@ -31,25 +31,20 @@ header nav a + a		{ border-left: thin solid #666;
 header nav a:hover		{ color: #fff; }
 #logo img			{ width: 90px; 
 			 	  opacity: 0.7; }
-#main .src			{ color: #888; }
 #main				{ flex: 1; 
 			 	  -webkit-flex: 1;
 				  padding-top: 20%;
 				  width: 50%;
+				  min-width: 600px;
 				  color: #fff; 
 				  margin-left: auto;
 				  margin-right: auto; }
-#main p, li			{ font-size: 15pt; 
-				  line-height: 140%;
+#main p, li			{ line-height: 140%;
 				  color: #bbb;}
 #main a				{ color: #ff0; 
 				  border-bottom: thin solid transparent;
 				  text-shadow: 1px 1px 0 #444; }
 #main a:hover			{ border-bottom: thin solid rgba(255, 255, 0, 0.2); }
-#main li			{ list-style-type: none; }
-#main li:before 		{ content:"·";
-				  line-height: 12pt;
-				  font-size: 18pt; }
 h2				{ font-size: 28pt; 
 				  margin: 0;
 				  text-shadow: 1px 1px 0 #000;
@@ -63,7 +58,8 @@ h3				{ margin: 0;
 				  font-weight: normal;
 				  font-size: 18pt; }
 a				{ text-decoration: none; }
-footer				{ width: 60%;
+footer				{ width: 50%;
+				  min-width: 600px;
 				  margin-left: auto;
 				  margin-right: auto;
 				  padding-bottom: 1em;
@@ -74,8 +70,19 @@ footer a			{ color: #888; }
 footer a:hover			{ color: #aaa; }
 code				{ font-family: monospace;
 				  font-size: smaller; }
+ul				{ list-style-type: none; 
+				  padding: 0; }
+ul li				{ display: flex; }
+ul li > :first-child		{ flex: 1; }
+ul li .src			{ opacity: 0.5; }
 
 @media only screen and (max-width: 768px), only screen and (max-device-width: 768px) {
+ul li 				{ display: block; }
+ul li > *			{ display: block; }
+ul li + li			{ margin-top: 0.5em; }
+ul li .src			{ line-height: 100%;
+				  font-size: smaller; }
+
 header				{ width: 95%; }
 #main				{ padding-top: 5%; }
 #main, #contact			{ width: 95%; }
@@ -83,8 +90,6 @@ header				{ width: 95%; }
 h1				{ font-size: 16pt; }
 h2				{ font-size: 18pt;
 			 	  text-align: center; }
-article p			{ font-size: 12pt; }
 header nav			{ font-size: 12pt; }
 section				{ display: block; }
-ul				{ padding-left: 1ex; }
 }
