--- a/start.css
+++ b/start.css
@@ -2,11 +2,12 @@ html, body			{ margin: 0;
 				  background-color: #333;
 				  height: 100%; }
 body				{ font-family: "Alegreya Sans", Gill Sans, Gill Sans MT, Calibri, sans-serif;
-				  font-size: 12pt; }
+				  font-size: 13pt; }
 section				{ display: flex; 
 			 	  flex-direction: column;
 				  height: 100%; }
-header				{ width: 70%;	
+header				{ width: 60%;	
+				  min-width: 600px;
 				  padding-top: 1em;
 				  padding-bottom: 1em;
 				  font-size: 18pt;
@@ -19,12 +20,12 @@ header div a			{ color: #bb6;
 				  border-bottom: thin transparent; }
 header div a:hover		{ border-bottom: thin solid rgba(255, 255, 0, 0.2); }
 article				{ flex: 1; 
-				  width: 70%;
+				  width: 60%;
+				  min-width: 600px;
 				  color: #ccc;
 				  margin-left: auto;
 				  margin-right: auto; }
-article p			{ font-size: 15pt; 
-				  line-height: 140%;
+article p			{ line-height: 140%;
 				  color: #ccc;}
 article a			{ color: yellow; 
 				  text-shadow: 1px 0 #222; }
@@ -37,7 +38,6 @@ aside				{ background-color: #2c2c2c;
 				  margin-left: -1ex;
 				  margin-bottom: 1em;
 				  margin-right: -1ex;
-				  font-size: 16pt;
 				  line-height: 140%;
 				  border-radius: 4pt;
 			 	  color: #ccc; }
@@ -62,17 +62,19 @@ nav				{ color: #aaa; }
 footer				{ text-align: center;
 				  padding-top: 1em;
 				  padding-bottom: 1em;
-				  font-size: 11pt;
+				  font-size: smaller;
 				  line-height: 130%;
 				  color: #666; }
 footer a			{ color: #89a; }
 footer a:hover			{ color: #cdf; }
 #logo				{ width: 60px; 
 				  padding-right: 10px; }
-.alt				{ color: #888;
+.alt				{ margin-top: -0.25em;
+				  margin-bottom: -0.25em;
 				  font-style: italic; }
-.explain p			{ font-size: 13pt; 
-				  color: #aaa; }
+.explain p 			{ color: #aaa; }
+.lead p				{ color: #fff; }
+.lead p.alt			{ color: #aaa; }
 .footnote			{ font-size: smaller; }
 @media only screen and (max-width: 768px), only screen and (max-device-width: 768px) {
 header				{ width: 95%; 
@@ -83,6 +85,4 @@ article 			{ width: 95%; }
 article ol			{ padding: 1ex; }
 h1				{ font-size: 16pt; }
 h2				{ font-size: 18pt; }
-article p			{ font-size: 12pt; }
-aside				{ font-size: 12pt; }
 }
